<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showWeatherView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSunny"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Controller.ShowWeatherActivity">

    <ImageView
        android:id="@+id/imgMainIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/summary_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forest_sunny" />

    <TextView
        android:id="@+id/txtCurrentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="90dp"
        app:layout_constraintBottom_toTopOf="@+id/txtCurrentCondition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="15" />

    <TextView
        android:id="@+id/txtCurrentCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunny_dumy"
        android:textColor="@color/colorWhite"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentTemp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/temp_recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMainIcon">

        <TextView
            android:id="@+id/min_temp_text"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="19°" />

        <TextView
            android:id="@+id/min_temp_label_text"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/min_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/min_temp_text" />

        <TextView
            android:id="@+id/current_temp_text"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/sun_text"
            app:layout_constraintEnd_toStartOf="@+id/max_temp_text"
            app:layout_constraintStart_toEndOf="@+id/min_temp_text"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="25°" />

        <TextView
            android:id="@+id/current_temp_label_text"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/current_temp"
            app:layout_constraintEnd_toStartOf="@+id/max_temp_label_text"
            app:layout_constraintStart_toEndOf="@+id/min_temp_label_text"
            app:layout_constraintTop_toBottomOf="@+id/current_temp_text" />

        <TextView
            android:id="@+id/max_temp_text"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="27°" />

        <TextView
            android:id="@+id/max_temp_label_text"
            style="@style/textStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/max_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_temp_text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_temp_label_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/temp_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_layout"
        tools:itemCount="3"
        tools:listitem="@layout/view_weather_days"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_data"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/no_weather_information_displayed"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/summary_layout"
        tools:text="20°"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imgFavorite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/fav"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="City"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgMainIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurrentCondition" />

</androidx.constraintlayout.widget.ConstraintLayout>